<resources>
    <string name="app_name">Teste Fidelizou.Me</string>
    <string name="atualizar">Atualizar</string>
    <string name="ordenar">Ordenar</string>
    <string name="name">Name</string>
    <string name="address">Address:</string>
    <string name="adress">Adress</string>
    <string name="city">City:</string>
    <string name="city2">City</string>
    <string name="country">Country:</string>
    <string name="country2">Country</string>
    <string name="state2">State:</string>
    <string name="state">State</string>
</resources>